Fix overflow text messages

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,5 +15,5 @@
 }
 
 .h-chat{
-    height: 500px;
+    height: 450px;
 }
